--- a/DiceRoll/Jenkinsfile
+++ b/DiceRoll/Jenkinsfile
@@ -1,13 +1,13 @@
 pipeline {
     agent any
     tools {
-        maven 'Maven3.9.9'  // Ensure Maven is installed
+        maven 'maven'  // Ensure Maven is installed
         jdk 'JDK21'     // Ensure JDK is installed
     }
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: "main", url: 'https://github.com/yourusername/dice-roll-app.git'
+                git branch: "master", url: 'https://github.com/yourusername/dice-roll-app.git'
             }
         }
         stage('Build') {
